--- a/communal.html
+++ b/communal.html
@@ -74,10 +74,10 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Легкие-оплаты</span></div>
+                <div class="group-title"><span class="badge badge-warning">Легкі-оплати</span></div>
                 <ul>
                   <li>
-                    <div class="icon portmone com ua"></div><a href="https://www.portmone.com.ua/" target="_blank">portmone</a><span class="opisi">Платежная система</span>
+                    <div class="icon portmone com ua"></div><a href="https://www.portmone.com.ua/" target="_blank">portmone</a><span class="opisi">Платіжна система</span>
                   </li>
                 </ul>
               </div>
@@ -97,12 +97,12 @@
                     <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Каб.Газ.(доставка)</span>
                   </li>
                   <li>
-                    <div class="icon a104 ua"></div><a href="https://104.ua/ua/" target="_blank">104.ua</a><span class="opisi">Поиск компании</span>
+                    <div class="icon a104 ua"></div><a href="https://104.ua/ua/" target="_blank">104.ua</a><span class="opisi">Пошук компанії</span>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Электроэнергия</span></div>
+                <div class="group-title"><span class="badge badge-success">Електроенергія</span></div>
                 <ul>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span>
@@ -137,33 +137,33 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Отопление</span></div>
+                <div class="group-title"><span class="badge badge-success">Опалення</span></div>
                 <ul>
                   <li>
-                    <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018" target="_blank">maanimo.com</a><span class="opisi">Цена.отопл.Укр.</span>
+                    <div class="icon maanimo com"></div><a href="https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018" target="_blank">maanimo.com</a><span class="opisi">Цена.опал.Укр.</span>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Интернет-кабельний</span></div>
+                <div class="group-title"><span class="badge badge-success">Інтернет-кабельний</span></div>
                 <ul>
                   <li>
-                    <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ/ТАРИФЫ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
+                    <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">РАХУНОК/ТАРИФИ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon ukrtelecom ua"></div><a href="http://cc.ukrtele.com/" target="_blank">cc.ukrtele.com</a><span class="opisi">Если Вас заблокировали</span>
+                    <div class="icon ukrtelecom ua"></div><a href="http://cc.ukrtele.com/" target="_blank">cc.ukrtele.com</a><span class="opisi">Якщо Вас заблокували</span>
                   </li>
                   <li>
-                    <div class="icon my ukrtelecom ua"></div><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">КАБИНЕТ</span>
+                    <div class="icon my ukrtelecom ua"></div><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">КАБІНЕТ</span>
                   </li>
                   <li>
                     <div class="icon my vega ua"></div><a href="https://my.vega.ua/" target="_blank">Vega Telecom</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a><a href="https://youtu.be/nsknyxq9alo" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
+                    <div class="icontooinfo a0repa3" title="Розділ-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Перехід абонентів Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a><a href="https://youtu.be/nsknyxq9alo" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Як дізнатися суму заборгованості та її сплатити" alt=""></div></a>
                   </li>
                   <li>
                     <div class="icon optonet com ua"></div><a href="https://optonet.com.ua/" target="_blank">optonet.com.ua</a><span class="opisi">Optonet</span>
@@ -177,25 +177,25 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Интернет-мобильный</span></div>
+                <div class="group-title"><span class="badge badge-success">Інтернет-мобільний</span></div>
                 <ul>
                   <li>
                     <div class="icon kyivstar ua"></div><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a>
                   </li>
                   <li>
-                    <div class="icon kyivstar ua"></div><a href="https://pay.kyivstar.ua/" target="_blank">pay.kyivstar.ua</a><span class="opisi">Пополнение</span>
+                    <div class="icon kyivstar ua"></div><a href="https://pay.kyivstar.ua/" target="_blank">pay.kyivstar.ua</a><span class="opisi">Поповнення</span>
                   </li>
                   <li>
                     <div class="icon vodafone ua"></div><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a>
                   </li>
                   <li>
-                    <div class="icon vodafone ua"></div><a href="https://pay.vodafone.ua/" target="_blank">pay.vodafone.ua</a><span class="opisi">Пополнение</span>
+                    <div class="icon vodafone ua"></div><a href="https://pay.vodafone.ua/" target="_blank">pay.vodafone.ua</a><span class="opisi">Поповнення</span>
                   </li>
                   <li>
                     <div class="icon lifecell ua"></div><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a>
                   </li>
                   <li>
-                    <div class="icon lifecell ua"></div><a href="https://oplata.lifecell.ua/" target="_blank">oplata.lifecell.ua</a><span class="opisi">Пополнение</span>
+                    <div class="icon lifecell ua"></div><a href="https://oplata.lifecell.ua/" target="_blank">oplata.lifecell.ua</a><span class="opisi">Поповнення</span>
                   </li>
                   <li>
                     <div class="icon a3mob ua"></div><a href="http://3mob.ua/" target="_blank">3mob.ua</a>
@@ -204,37 +204,37 @@
                     <div class="icon intertelecom ua"></div><a href="http://www.intertelecom.ua/" target="_blank">intertelecom.ua</a>
                   </li>
                   <li>
-                    <div class="icon intertelecom ua"></div><a href="http://www.intertelecom.ua/payments" target="_blank">intertelecom</a><span class="opisi">Пополнение</span>
+                    <div class="icon intertelecom ua"></div><a href="http://www.intertelecom.ua/payments" target="_blank">intertelecom</a><span class="opisi">Поповнення</span>
                   </li>
                   <li>
-                    <div class="icon intertelecom ua"></div><a href="https://assa.intertelecom.ua/ru/login" target="_blank">assa.intertelecom</a><span class="opisi">Кабинет</span>
+                    <div class="icon intertelecom ua"></div><a href="https://assa.intertelecom.ua/ru/login" target="_blank">assa.intertelecom</a><span class="opisi">Кабінет</span>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">ИНФО от minfin.com.ua</span></div>
+                <div class="group-title"><span class="badge badge-success">ІНФО от minfin.com.ua</span></div>
                 <ul>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/labour/salary/min/" target="_blank">Миним.зараб.плата</a>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/labour/salary/min/" target="_blank">Мінім.зароб.плата</a>
                   </li>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/labour/salary/average/" target="_blank">Средняя заработная плата</a>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/labour/salary/average/" target="_blank">Середня заробітна плата</a>
                   </li>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/labour/wagemin/" target="_blank">Прожит.миним.в.Украине</a>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/labour/wagemin/" target="_blank">Прожити.мінімум.в.Україні</a>
                   </li>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/economy/index/inflation/" target="_blank">Индекс инфляции</a>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/economy/index/inflation/" target="_blank">Індекс інфляції</a>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">ИНФО другое</span></div>
+                <div class="group-title"><span class="badge badge-success">ІНФО інше</span></div>
                 <ul>
                   <li>
-                    <div class="icon buhoblik org ua"></div><a href="http://www.buhoblik.org.ua/kadry-zarplata/pensii/2827-2827-minimalnaya-pensiya.html" target="_blank">Миним.пенсия.в.Украине</a>
+                    <div class="icon buhoblik org ua"></div><a href="http://www.buhoblik.org.ua/kadry-zarplata/pensii/2827-2827-minimalnaya-pensiya.html" target="_blank">Мінім.пенсія.в.Україні</a>
                   </li>
                 </ul>
               </div>
