--- a/games.html
+++ b/games.html
@@ -74,7 +74,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Азартные</span></div>
+                <div class="group-title"><span class="badge badge-success">Азартні</span></div>
                 <ul>
                   <li>
                     <div class="icon playset ru"></div><a href="http://www.playset.ru/" target="_blank">playset.ru</a>
@@ -91,7 +91,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Логические</span></div>
+                <div class="group-title"><span class="badge badge-success">Логічні</span></div>
                 <ul>
                   <li>
                     <div class="icon zumagames ru"></div><a href="http://www.zumagames.ru/" target="_blank">zumagames.ru</a>
@@ -119,7 +119,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Инфо ТОП</span></div>
+                <div class="group-title"><span class="badge badge-success">Інфо ТОП</span></div>
                 <ul>
                   <li>
                     <div class="icon onlimegames ru"></div><a href="https://onlimegames.ru/games/top100" target="_blank">onlimegames.ru=top100</a>
@@ -166,14 +166,14 @@
                   </li>
                   <li>
                     <div class="icon silvergames"></div><a href="https://www.silvergames.com/ru/" target="_blank">silvergames.com</a>
-                    <div class="icontooinfo a0repa7" title="Играть В Классные Бесплатные Онлайн Игры На Silvergames.com" alt=""></div>
+                    <div class="icontooinfo a0repa7" title="Грати в класні безкоштовні онлайн ігри на Silvergames.com" alt=""></div>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Букмекерская контора - СНГ</span></div>
+                <div class="group-title"><span class="badge badge-success">Букмекерська контора - СНД</span></div>
                 <ul>
                   <li>
                     <div class="icon fan-sport com ua"></div><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua`</a>
@@ -193,7 +193,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Букмекерская контора - Европа</span></div>
+                <div class="group-title"><span class="badge badge-success">Букмекерська контора - Європа</span></div>
                 <ul>
                   <li>
                     <div class="icon pinnacle com"></div><a href="https://www.pinnacle.com/ru/" target="_blank">pinnacle.com</a>
