--- a/media.html
+++ b/media.html
@@ -74,7 +74,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2020.01)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.ЗАКОРДОН (playlist.2020.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
@@ -91,7 +91,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Ваше любимое видео!</span></div>
+                <div class="group-title"><span class="badge badge-success">Ваше улюблене відео!</span></div>
                 <ul>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/" target="_blank">youtube.com</a>
@@ -116,7 +116,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Кинотеатры</span></div>
+                <div class="group-title"><span class="badge badge-success">Кінотеатри</span></div>
                 <ul>
                   <li>
                     <div class="icon megogo net"></div><a href="https://megogo.net/ru" target="_blank">megogo.net</a>
@@ -129,7 +129,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.УКРАИНСКАЯ (playlist.2020.01)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.УКРАЇНСЬКА (playlist.2020.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
@@ -146,7 +146,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Все о Кино</span></div>
+                <div class="group-title"><span class="badge badge-success">Все про Кіно</span></div>
                 <ul>
                   <li>
                     <div class="icon kinopoisk ru"></div><a href="https://www.kinopoisk.ru/" target="_blank">kinopoisk.ru</a>
@@ -154,7 +154,7 @@
                   </li>
                 </ul>
                 <div class="group">
-                  <div class="group-title"><span class="badge badge-success">Сериалы онлайн</span></div>
+                  <div class="group-title"><span class="badge badge-success">Серіали онлайн</span></div>
                 </div>
                 <ul>
                   <li>
@@ -163,7 +163,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Фильмы онлайн</span></div>
+                <div class="group-title"><span class="badge badge-success">Фільми онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon kinokrad co"></div><a href="http://kinokrad.co/" target="_blank">kinokrad.co</a>
@@ -185,7 +185,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.РУССКАЯ (playlist.2020.01)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеєр.ТОП.РУСЬКА (playlist.2020.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
@@ -202,7 +202,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"> <span class="badge badge-success">Радио онлайн</span></div>
+                <div class="group-title"> <span class="badge badge-success">Радіо онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon onlineradiobox com"></div><a href="https://onlineradiobox.com/ua/" target="_blank">onlineradiobox.com</a>
@@ -216,7 +216,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Музыка онлайн</span></div>
+                <div class="group-title"><span class="badge badge-success">Музика онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon zaycev fm"></div><a href="https://www.zaycev.fm/" target="_blank">zaycev.fm</a>
@@ -248,13 +248,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Музыка СКАЧАТЬ</span></div>
+                <div class="group-title"><span class="badge badge-success">Музика ЗАВАНТАЖИТИ</span></div>
                 <ul>
                   <li>
                     <div class="icon z1 fm"></div><a href="https://z1.fm/" target="_blank">z1.fm</a>
                   </li>
                   <li>
-                    <div class="icon nnmclub to"></div><a href="http://nnmclub.to/forum/portal.php?c=25" target="_blank">nnm.Сборники</a>
+                    <div class="icon nnmclub to"></div><a href="http://nnmclub.to/forum/portal.php?c=25" target="_blank">nnm.Збірки</a>
                     <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
