--- a/news.html
+++ b/news.html
@@ -74,7 +74,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Новости</span></div>
+                <div class="group-title"><span class="badge badge-success">Новини</span></div>
                 <ul>
                   <li>
                     <div class="icon ukr net"></div><a href="https://www.ukr.net/" target="_blank">Ukr.net</a>
@@ -142,7 +142,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Всякое</span></div>
+                <div class="group-title"><span class="badge badge-success">Всяке</span></div>
                 <ul>
                   <li>
                     <div class="icon sis at ua"></div><a href="http://sis.at.ua/" target="_blank">Нужные ШТУЧКИ!</a>
@@ -155,7 +155,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Новости спорта</span></div>
+                <div class="group-title"><span class="badge badge-success">Новини спорту</span></div>
                 <ul>
                   <li>
                     <div class="icon myscore com ua"></div><a href="https://www.myscore.com.ua/" target="_blank">myscore.com.ua</a>
@@ -178,13 +178,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Новости на Youtube</span></div>
+                <div class="group-title"><span class="badge badge-success">Новини на Youtube</span></div>
                 <ul>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/user/tsnukraine/videos" target="_blank">Youtube_ТСН</a>
                   </li>
                   <li>
-                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/sobytia/videos" target="_blank">Youtube_Сегодня</a>
+                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/sobytia/videos" target="_blank">Youtube_Сьогодні</a>
                   </li>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/user/ViknaSTB/videos" target="_blank">Youtube_Вікна-новини</a>
@@ -196,15 +196,15 @@
                     <div class="icon youtube"></div><a href="https://www.youtube.com/user/Arxivnn/videos" target="_blank">Youtube_Надзвичайні новини. ICTV</a>
                   </li>
                   <li>
-                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/podrobnosti/videos" target="_blank">Youtube_Подробности</a>
+                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/podrobnosti/videos" target="_blank">Youtube_Подробиці</a>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">online-Новости на Youtube</span></div>
+                <div class="group-title"><span class="badge badge-success">online-Новини на Youtube</span></div>
                 <ul>
                   <li>
-                    <div class="icon youtube"></div><a href="https://www.youtube.com/channel/UCj4dH8kfRQFey9MYSENPNaQ" target="_blank">online_112 Украина</a>
+                    <div class="icon youtube"></div><a href="https://www.youtube.com/channel/UCj4dH8kfRQFey9MYSENPNaQ" target="_blank">online_112 Україна</a>
                   </li>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/channel/UCja992VI_u2e52c9FHQXw5A" target="_blank">online_24 Канал</a>
@@ -222,17 +222,17 @@
                     <div class="icon youtube"></div><a href="https://www.youtube.com/user/5channel" target="_blank">online_5 канал</a>
                   </li>
                   <li>
-                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/SvobodaRadio/featured" target="_blank">online_Радио Свобода</a>
+                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/SvobodaRadio/featured" target="_blank">online_Радіо Свобода</a>
                   </li>
                   <li>
-                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/euronewsru" target="_blank">online_euronews (на русском)</a>
+                    <div class="icon youtube"></div><a href="https://www.youtube.com/user/euronewsru" target="_blank">online_euronews (на русс)</a>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Органы государственной власти Украины</span></div>
+                <div class="group-title"><span class="badge badge-success">Органи державної влади України</span></div>
                 <ul>
                   <li>
                     <div class="icon president gov ua"></div><a href="https://www.president.gov.ua/" target="_blank">Президент України</a>
@@ -249,7 +249,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Другие органы и министерства</span></div>
+                <div class="group-title"><span class="badge badge-success">Інші органи та міністерства</span></div>
                 <ul>
                   <li>
                     <div class="icon minagro gov ua"></div><a href="http://www.minagro.gov.ua/" target="_blank">Мін. аграрної політики та продов.</a>
