--- a/social.html
+++ b/social.html
@@ -26,7 +26,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="WebSIS &amp; Company">
     <meta name="keywords" content="лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, zakladki, top, топ сайтів, speeddial, новости, соцсети, видео, погода">
-    <meta name="description" content="Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.">
+    <meta name="description" content="Повний перелік найпопулярніших веб-сайтів вебу. Зручний каталог сайтів із сортуванням за тематикою. Усі топ сайти в одному місці. Все для зручності в Інтернеті.">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Player-top-->
     <script src="//zakladki.github.io/playerjs.js" type="text/javascript"></script>
@@ -267,7 +267,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top_one" target="_blank" title="Telegram: КАНАЛ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Відеоінструкція: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
+            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top_one" target="_blank" title="Telegram: КАНАЛ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Відеоінструкція: автозапуск ЗАКЛАДОК"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
